--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,49 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  height: 40px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.button-wrapper{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border: 2px solid grey;
+  box-shadow: cornsilk;
+  background-color: 'white';
+  padding: 10px;
+  margin: 15px;
+}
+
+.button{
+  width: 90px;
+  height: 30px;
+  margin: 4px;
+  border-radius: 8px;
+  font-family: 'BlinkMacSystemFont';
+  font-size: '18px';
+  font-weight: 600;
+}
+
+#like:focus {     
+  background-color: blue;  
+  color: white;  
+}
+
+#dislike:focus {     
+  background-color: red;    
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.count{
+  width: 90px;
+  height: 30px;
+  margin: 12px;
+  border-radius: 8px;
+  font-family: 'BlinkMacSystemFont';
+  font-size: '18px';
+  font-weight: 600;
 }
